--- a/food.css
+++ b/food.css
@@ -1,18 +1,24 @@
 *{
      margin: 0;
      padding: 0;
-     font-family: sans-serif;
+     font-family: fantasy;
      box-sizing: border-box;
+     color:rgb(243, 243, 252);
+}
+body{
+    background-image:url("img/BGIMG.jpg") ;
 }
 h1{
     text-align: center;
-    color: green;
+    color: rgb(233, 236, 233);
     padding: 20px;
 }
 nav{
-    background-color: lime;
+    background-color: palevioletred;
     display: grid;
     place-items: center;
+    font-size: x-large;
+    
 }
 nav ul{
     list-style-type: none;
@@ -22,7 +28,7 @@ nav ul a{
     display: inline-block;
     padding: 20px;
     text-decoration: none;
-    color: #000;
+    color: black;
     transition: 0.2s ease-in;
 }
 nav ul a:hover{
@@ -34,6 +40,8 @@ nav ul a:hover{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     padding: 30px,20px;
+    grid-gap: 50px;
+    
 
 
 }
@@ -41,7 +49,8 @@ nav ul a:hover{
     height:300px; 
     width:100%;
     object-fit: cover;
-    cursor: pointer; 
+    cursor: pointer;
+ 
 }
 .items h4 {
     padding: 5px;
